--- a/Motivity/Podfile
+++ b/Motivity/Podfile
@@ -25,6 +25,13 @@ target 'MotivityWidgetExtension' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
+  # Pods for Motivity
+	pod 'Firebase/Core'
+	pod 'Firebase/Database'
+	pod 'Firebase/Auth'
+
+
+
   # Pods for MotivityWidgetExtension
 
 end
